implemented @TestMethodOrder correctly, downgrade to Java 8 => changes to code, Docker ready state